Fixes gray and badly visible focused links

--- a/src/onegov.swissvotes/onegov/swissvotes/theme/styles/swissvotes.scss
+++ b/src/onegov.swissvotes/onegov/swissvotes/theme/styles/swissvotes.scss
@@ -77,7 +77,7 @@ main {
 /*
     Links
 */
-a {
+a, a:active, a:focus {
     color: #428bca;
 }
 
